setup fullscreen, animate js, and structure for the app

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,6 +2,10 @@
 title: Middleman 4 Boilerplate
 ---
 
-<!-- PUT YOUR CONTENT FOR THE HOMEPAGE HERE -->
-<!-- DELETE THIS -->
-<%= partial "partials/watermark" %>
+
+<div data-anchor="intro" class="section teal accent-4">
+  <%= partial "partials/intro" %>
+</div>
+<div id="what" data-anchor="whatwedo" class="section blue">
+  <%= partial "partials/whatwedo" %>
+</div>
