--- a/source/stylesheets/_custom.scss
+++ b/source/stylesheets/_custom.scss
@@ -1,1 +1,13 @@
-// PUT CUSTOM SCSS / SASS HERE
+.full-w{
+  width: 100%;
+}
+
+#tagline{
+  margin-top: -26%;
+}
+
+#what{
+  background: url('https://s3.amazonaws.com/tsmdeck/purp.jpg');
+  background-size: cover;
+  background-position: center center;
+}
