--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -4,8 +4,12 @@
 @import "materialize/components/color";
 // You can customize the theme colors here:
 $primary-color: color("blue", "lighten-2") !default;
+@import 'variables';
 @import 'materialize';
 // END MATERIALIZE
 @import "font-awesome";
 @import "stickyfooter";
+@import "jquery-fullpage";
+@import "preloader";
+@import "animate";
 @import "custom";
