--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -8,18 +8,34 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Use title if it's in the page YAML frontmatter -->
     <title><%= current_page.data.title || "Middleman" %></title>
-    <link href='//fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     <%= partial 'partials/meta-seo' %>
     <%= stylesheet_link_tag :site %>
   </head>
 
   <body class="<%= page_classes %>">
-    <%= partial 'layouts/partials/navbar' %>
-    <main>
-      <!-- CONTENT SHOWS HERE -->
+    <!-- CONTENT SHOWS HERE -->
+    <div id="fullpage">
       <%= yield %>
-    </main>
-    <%= partial 'layouts/partials/footer' %>
+    </div>
+
+    <!-- Preloader -->
+    <div id="preloader">
+        <div id="status">
+          <div class="preloader-wrapper big active">
+            <div class="spinner-layer">
+              <div class="circle-clipper left">
+                <div class="circle"></div>
+              </div><div class="gap-patch">
+                <div class="circle"></div>
+              </div><div class="circle-clipper right">
+                <div class="circle"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
+
     <%= javascript_include_tag :all %>
   </body>
 </html>
