--- a/source/partials/_whatwedo.html.erb
+++ b/source/partials/_whatwedo.html.erb
@@ -1,12 +1,12 @@
 <div class="row">
-  <div class="col s12 m3 offset-m1 white-text">
+  <div class="col s6 offset-s6 m6 l2 offset-l2 white-text">
     <img id="what-logo" class="full-w" src="https://s3.amazonaws.com/tsmdeck/tsmlogo.png">
   </div>
-  <div id="what-info-text" class="col s12 m6 offset-m1 white-text right-align">
-    <h2>What we do.</h2>
-    <p><%= lorem.paragraphs(3) %></p>
+  <div id="what-info-text" class="col s12 m6 l4 offset-l1 white-text right-align">
+    <h2>What we do</h2>
+    <p><%= lorem.paragraphs(2) %></p>
   </div>
-  <div class="col s10 offset-s1">
+  <div class="col l8 offset-l2">
     <img id="what-we-do-img" class="full-w" src="https://s3.amazonaws.com/tsmdeck/tsmisometric.png">
   </div>
 </div>
