--- a/source/partials/_intro.html.erb
+++ b/source/partials/_intro.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col s12 m6 offset-m3 l6 offset-l3 center-align long-shadow-text-teal-accent-4">
-    <img id="tsm-logo" class="responsive-img" src="https://s3.amazonaws.com/tsmdeck/tsmlogo.png">
+  <div class="col s12 m6 offset-m3 l4 offset-l4 center-align long-shadow-text-teal-accent-4">
+    <img id="tsm-logo" class="full-w" src="https://s3.amazonaws.com/tsmdeck/tsmlogo.png">
   </div>
 </div>
