--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -6,6 +6,9 @@ title: Middleman 4 Boilerplate
 <div data-anchor="intro" class="section teal accent-4">
   <%= partial "partials/intro" %>
 </div>
-<div id="what" data-anchor="whatwedo" class="section blue">
+<div id="what" data-anchor="whatwedo" class="section">
   <%= partial "partials/whatwedo" %>
+</div>
+<div id="share" data-anchor="sharecontest" class="section orange">
+  <%= partial "partials/sharecontest" %>
 </div>
