--- a/source/partials/_whatwedo.html.erb
+++ b/source/partials/_whatwedo.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col s6 offset-s6 m6 l2 offset-l2 white-text">
-    <img id="what-logo" class="full-w" src="https://s3.amazonaws.com/tsmdeck/tsmlogo.png">
+    <img id="what-logo" class="full-w" src="https://s3.amazonaws.com/tsmdeck/tsmlogoplain.png">
   </div>
   <div id="what-info-text" class="col s12 m6 l4 offset-l1 white-text right-align">
     <h2>What we do</h2>
