--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -12,4 +12,5 @@ $primary-color: color("blue", "lighten-2") !default;
 @import "jquery-fullpage";
 @import "preloader";
 @import "animate";
+@import "contest";
 @import "custom";
