added spotify section

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -12,3 +12,6 @@ title: Middleman 4 Boilerplate
 <div id="share" data-anchor="sharecontest" class="section orange">
   <%= partial "partials/sharecontest" %>
 </div>
+<div id="spotify-section" data-anchor="spotify" class="section teal accent-4">
+  <%= partial "partials/spotify" %>
+</div>
