--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -13,4 +13,5 @@ $primary-color: color("blue", "lighten-2") !default;
 @import "preloader";
 @import "animate";
 @import "contest";
+@import "spotify";
 @import "custom";
