--- a/source/partials/_sharecontest.html.erb
+++ b/source/partials/_sharecontest.html.erb
@@ -1,11 +1,11 @@
 <div class="row">
-  <div class="col s12 m6 l4 offset-l2 white-text left-align">
+  <div id="share-contest" class="col s12 m6 l4 offset-l2 white-text left-align">
     <h2>Share Contest</h2>
     <p><%= lorem.sentences(2) %></p>
     <!-- CONTEST -->
     <%= partial 'partials/contest' %>
   </div>
-  <div class="col s6 offset-s6 m6 l4 offset-l1 valign-wrapper">
+  <div id="share-ipad" class="col s6 offset-s6 m6 l4 offset-l1 valign-wrapper">
     <img class="full-w" src="https://s3.amazonaws.com/tsmdeck/sharecontestimage.png">
   </div>
 </div>
