added instagram section

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -15,3 +15,6 @@ title: Middleman 4 Boilerplate
 <div id="spotify-section" data-anchor="spotify" class="section teal accent-4">
   <%= partial "partials/spotify" %>
 </div>
+<div id="insta" data-anchor="instagram" class="section">
+  <%= partial "partials/instagram" %>
+</div>
