--- a/source/stylesheets/_custom.scss
+++ b/source/stylesheets/_custom.scss
@@ -6,7 +6,7 @@
   margin-top: -26%;
 }
 
-#what{
+#what, #insta{
   background: url('https://s3.amazonaws.com/tsmdeck/purp.jpg');
   background-size: cover;
   background-position: center center;
