--- a/source/partials/_sharecontest.html.erb
+++ b/source/partials/_sharecontest.html.erb
@@ -5,7 +5,7 @@
     <!-- CONTEST -->
     <%= partial 'partials/contest' %>
   </div>
-  <div id="share-ipad" class="col s6 offset-s6 m6 l4 offset-l1 valign-wrapper">
+  <div id="share-ipad" class="col s6 offset-s6 m6 l4 valign-wrapper">
     <img class="full-w" src="https://s3.amazonaws.com/tsmdeck/sharecontestimage.png">
   </div>
 </div>
