assessed responsive behavior in first 2 slides and moved preloader to its own partial

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -20,21 +20,7 @@
     </div>
 
     <!-- Preloader -->
-    <div id="preloader">
-        <div id="status">
-          <div class="preloader-wrapper big active">
-            <div class="spinner-layer">
-              <div class="circle-clipper left">
-                <div class="circle"></div>
-              </div><div class="gap-patch">
-                <div class="circle"></div>
-              </div><div class="circle-clipper right">
-                <div class="circle"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-    </div>
+    <%= partial "layouts/partials/preloader"%>
 
     <%= javascript_include_tag :all %>
   </body>
