--- a/source/partials/_whatwedo.html.erb
+++ b/source/partials/_whatwedo.html.erb
@@ -1,12 +1,16 @@
 <div class="row">
-  <div class="col s6 offset-s6 m6 l2 offset-l2 white-text">
-    <img id="what-logo" class="full-w" src="https://s3.amazonaws.com/tsmdeck/tsmlogoplain.png">
+  <div class="col m4 offset-m1 white-text valign-wrapper">
+    <img id="what-logo" class="full-w valign" src="https://s3.amazonaws.com/tsmdeck/tsmlogoplain.png">
   </div>
-  <div id="what-info-text" class="col s12 m6 l4 offset-l2 white-text right-align">
-    <h2>What we do</h2>
-    <p><%= lorem.paragraphs(2) %></p>
+  <div id="what-info-text" class="valign-wrapper col m5 offset-m1 white-text right-align">
+    <div class="valign">
+      <h3>What we do</h3>
+      <p><%= lorem.paragraphs(1) %></p>
+    </div>
   </div>
-  <div class="col l8 offset-l2">
+</div>
+<div class="row">
+  <div class="col m10 offset-m1">
     <img id="what-we-do-img" class="full-w" src="https://s3.amazonaws.com/tsmdeck/tsmisometric.png">
   </div>
 </div>
