--- a/source/partials/_sharecontest.html.erb
+++ b/source/partials/_sharecontest.html.erb
@@ -1,11 +1,13 @@
-<div class="row">
-  <div id="share-contest" class="col s12 m6 l4 offset-l2 white-text left-align">
-    <h2>Share Contest</h2>
-    <p><%= lorem.sentences(2) %></p>
+<div class="row valign-wrapper">
+  <div id="share-contest" class="col m6 valign center-block">
     <!-- CONTEST -->
     <%= partial 'partials/contest' %>
   </div>
-  <div id="share-ipad" class="col s6 offset-s6 m6 l4 valign-wrapper">
+  <div id="share-ipad" class="col m4 valign center-block">
+    <div class="right-align white-text">
+      <h3>Share Contest</h3>
+      <p><%= lorem.sentences(2) %></p>
+    </div>
     <img class="full-w" src="https://s3.amazonaws.com/tsmdeck/sharecontestimage.png">
   </div>
 </div>
