assessed responsive behavior of the spotify section

--- a/source/partials/_spotify.html.erb
+++ b/source/partials/_spotify.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
-  <div id="imac-header" class="col s6 offset-s3">
-    <h1 class="white-text">Spotify Contest</h1>
+  <div id="imac-header" class="col m8 offset-m2">
+    <h3 class="white-text">Spotify Contest</h3>
   </div>
-  <div id="imac" class="col s12">
+  <div id="imac" class="col m8 offset-m2">
     <div class='imac-wrapper'>
       <div class='imac'>
         <div class='imac__screen'>
@@ -28,7 +28,7 @@
       </div>
     </div>
   </div>
-  <div id="imac-text" class="col s6 offset-s3">
-    <p class="white-text"><%= lorem.paragraphs(1)%></p>
+  <div id="imac-text" class="col m8 offset-m2">
+    <p class="white-text"><%= lorem.sentences(3)%></p>
   </div>
 </div>
