--- a/source/stylesheets/_spotify.scss
+++ b/source/stylesheets/_spotify.scss
@@ -3,8 +3,8 @@
   width: 100%;
   max-width: 1000px;
   // max-height: 604px;
-  padding: 40px 0;
-  margin: 0 auto 40px;
+  // padding: 40px 0;
+  // margin: 0 auto 40px;
 }
 
 .imac {
