--- a/source/partials/_instagram.html.erb
+++ b/source/partials/_instagram.html.erb
@@ -1,11 +1,11 @@
-<div class="row">
-  <div id="hashtags" class="col s6 offset-s6 m6 l5 offset-l1 white-text">
+<div class="row valign-wrapper">
+  <div id="hashtags" class="col m5 center-block valign white-text">
     <script src="https://snapwidget.com/js/snapwidget.js"></script>
     <iframe src="https://snapwidget.com/p/widget/?id=kDI6wrWn2Q&t=405" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%;"></iframe>
   </div>
-  <div id="insta-text" class="col s12 m6 l4 offset-l1 white-text right-align">
-    <h2>Instagram Hashtag Contests</h2>
-    <p><%= lorem.paragraphs(2) %></p>
+  <div id="insta-text" class="col m5 center-block valign white-text right-align">
+    <h3>Instagram Hashtag Contests</h3>
+    <p><%= lorem.paragraphs(1) %></p>
   </div>
 </div>
 
