--- a/source/partials/_whatwedo.html.erb
+++ b/source/partials/_whatwedo.html.erb
@@ -1,12 +1,10 @@
-<div class="row">
-  <div class="col m4 offset-m1 white-text valign-wrapper">
-    <img id="what-logo" class="full-w valign" src="https://s3.amazonaws.com/tsmdeck/tsmlogoplain.png">
+<div class="row valign-wrapper">
+  <div class="col m4 valign center-block white-text">
+    <img id="what-logo" class="full-w" src="https://s3.amazonaws.com/tsmdeck/tsmlogoplain.png">
   </div>
-  <div id="what-info-text" class="valign-wrapper col m5 offset-m1 white-text right-align">
-    <div class="valign">
-      <h3>What we do</h3>
-      <p><%= lorem.paragraphs(1) %></p>
-    </div>
+  <div id="what-info-text" class="col m5 valign center-block white-text right-align">
+    <h3>What we do</h3>
+    <p><%= lorem.paragraphs(1) %></p>
   </div>
 </div>
 <div class="row">
