added games section

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -18,3 +18,6 @@ title: Middleman 4 Boilerplate
 <div id="insta" data-anchor="instagram" class="section">
   <%= partial "partials/instagram" %>
 </div>
+<div id="apps-games" data-anchor="games" class="section orange">
+  <%= partial "partials/games" %>
+</div>
