added margin to the first input on the contest

--- a/source/partials/_contest.html.erb
+++ b/source/partials/_contest.html.erb
@@ -1,6 +1,6 @@
 <iframe name="hidden_iframe" id="hidden_iframe"></iframe>
     <form id="contest-form" class="col s12" action="https://docs.google.com/forms/d/1pUwfEoQSDKWsGoSU1a8XHbmEpCv5JNN1YTiegWWmYw4/formResponse" method="POST" target="hidden_iframe">
-      <div class="input-field">
+      <div class="input-field first-input">
         <!-- First Name -->
         <input id="firstName" name="entry.1658002111" type="text" readonly onfocus="this.removeAttribute('readonly');">
         <label for="firstName">First Name</label>
