added tech section

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,7 +3,7 @@ title: Middleman 4 Boilerplate
 ---
 
 
-<div data-anchor="intro" class="section teal accent-4">
+<div id="introsection" data-anchor="intro" class="section teal accent-4">
   <%= partial "partials/intro" %>
 </div>
 <div id="what" data-anchor="whatwedo" class="section">
@@ -20,4 +20,7 @@ title: Middleman 4 Boilerplate
 </div>
 <div id="apps-games" data-anchor="games" class="section orange">
   <%= partial "partials/games" %>
+</div>
+<div id="tech" data-anchor="technologies" class="section teal accent-4">
+  <%= partial "partials/technologies" %>
 </div>
