setback to 1024px as max for rows

--- a/source/partials/_spotify.html.erb
+++ b/source/partials/_spotify.html.erb
@@ -2,28 +2,30 @@
   <div id="imac-header" class="col m8 offset-m2">
     <h3 class="white-text">Spotify Contest</h3>
   </div>
-  <div id="imac" class="col m8 offset-m2">
-    <div class='imac-wrapper'>
-      <div class='imac'>
-        <div class='imac__screen'>
-          <div class='camera'></div>
-          <!-- <div class='shine'></div> -->
-          <div class='display'>
-            <iframe id="spotifypromo" src="https://fearless-spotify.herokuapp.com/"></iframe>
-          </div>
-          <div class='logo'>
-            <div class='top'>
-              <span></span>
+  <div class="col m10 offset-m1">
+    <div id="imac" class="col m7 offset-m2">
+      <div class='imac-wrapper'>
+        <div class='imac'>
+          <div class='imac__screen'>
+            <div class='camera'></div>
+            <!-- <div class='shine'></div> -->
+            <div class='display'>
+              <iframe id="spotifypromo" src="https://fearless-spotify.herokuapp.com/"></iframe>
             </div>
-            <div class='butt'>
-              <span></span>
+            <div class='logo'>
+              <div class='top'>
+                <span></span>
+              </div>
+              <div class='butt'>
+                <span></span>
+              </div>
+              <div class='bite'></div>
             </div>
-            <div class='bite'></div>
           </div>
-        </div>
-        <div class='imac__stand'>
-          <div class='top'></div>
-          <div class='bottom'></div>
+          <div class='imac__stand'>
+            <div class='top'></div>
+            <div class='bottom'></div>
+          </div>
         </div>
       </div>
     </div>
