added work section

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -24,3 +24,6 @@ title: Middleman 4 Boilerplate
 <div id="tech" data-anchor="technologies" class="section teal accent-4">
   <%= partial "partials/technologies" %>
 </div>
+<div id="our-work" data-anchor="work" class="section">
+  <%= partial "partials/work" %>
+</div>
