added contact section

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,7 +9,7 @@ title: Middleman 4 Boilerplate
 <div id="what" data-anchor="whatwedo" class="section">
   <%= partial "partials/whatwedo" %>
 </div>
-<div id="share" data-anchor="sharecontest" class="section orange">
+<div id="share" data-anchor="sharecontest" class="section orange lighten-1">
   <%= partial "partials/sharecontest" %>
 </div>
 <div id="spotify-section" data-anchor="spotify" class="section teal accent-4">
@@ -18,7 +18,7 @@ title: Middleman 4 Boilerplate
 <div id="insta" data-anchor="instagram" class="section">
   <%= partial "partials/instagram" %>
 </div>
-<div id="apps-games" data-anchor="games" class="section orange">
+<div id="apps-games" data-anchor="games" class="section orange lighten-1">
   <%= partial "partials/games" %>
 </div>
 <div id="tech" data-anchor="technologies" class="section teal accent-4">
@@ -26,4 +26,7 @@ title: Middleman 4 Boilerplate
 </div>
 <div id="our-work" data-anchor="work" class="section">
   <%= partial "partials/work" %>
+</div>
+<div id="contact-us" data-anchor="contact" class="section orange lighten-1">
+  <%= partial "partials/contact" %>
 </div>
