mobile friendly up to tech

--- a/source/partials/_instagram.html.erb
+++ b/source/partials/_instagram.html.erb
@@ -1,4 +1,4 @@
-<div class="row valign-wrapper">
+<div class="row hide-on-small-only valign-wrapper">
   <div id="hashtags" class="col m5 center-block valign white-text">
     <script src="https://snapwidget.com/js/snapwidget.js"></script>
     <iframe src="https://snapwidget.com/p/widget/?id=kDI6wrWn2Q&t=405" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%;"></iframe>
@@ -8,4 +8,13 @@
     <p><%= lorem.paragraphs(1) %></p>
   </div>
 </div>
-
+<div class="row hide-on-med-and-up">
+  <div id="insta-text2" class="col s12 center-block white-text right-align">
+    <h3>Instagram Hashtag Contests</h3>
+    <p><%= lorem.paragraphs(1) %></p>
+  </div>
+  <div id="hashtags2" class="col s12 center-block white-text">
+    <script src="https://snapwidget.com/js/snapwidget.js"></script>
+    <iframe src="https://snapwidget.com/p/widget/?id=kDI6wrWn2Q&t=405" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%;"></iframe>
+  </div>
+</div>
