--- a/source/partials/_sharecontest.html.erb
+++ b/source/partials/_sharecontest.html.erb
@@ -1,9 +1,13 @@
 <div class="row valign-wrapper">
-  <div id="share-contest" class="col m6 valign center-block">
+  <div id="share-contest" class="col s12 m6 valign center-block">
+    <div class="right-align white-text hide-on-med-and-up">
+      <h3>Share Contest</h3>
+      <p><%= lorem.sentences(1) %></p>
+    </div>
     <!-- CONTEST -->
     <%= partial 'partials/contest' %>
   </div>
-  <div id="share-ipad" class="col m4 valign center-block">
+  <div id="share-ipad" class="col m4 hide-on-small-only valign center-block">
     <div class="right-align white-text">
       <h3>Share Contest</h3>
       <p><%= lorem.sentences(1) %></p>
