--- a/source/stylesheets/_custom.scss
+++ b/source/stylesheets/_custom.scss
@@ -106,3 +106,9 @@
     background: #00bfa5 !important;
     padding: 20px !important;
 }
+
+#spotifypromo2{
+    min-height: 300px;
+    width: 100%;
+    border: none;
+}
