--- a/source/partials/_spotify.html.erb
+++ b/source/partials/_spotify.html.erb
@@ -2,7 +2,7 @@
   <div id="imac-header" class="col m8 offset-m2">
     <h3 class="white-text">Spotify Contest</h3>
   </div>
-  <div id="imac" class="col m8 offset-m2">
+  <div id="imac" class="col hide-on-small-only m8 offset-m2">
     <div class='imac-wrapper'>
       <div class='imac'>
         <div class='imac__screen'>
@@ -27,6 +27,9 @@
         </div>
       </div>
     </div>
+  </div>
+  <div class="col s12 hide-on-med-and-up">
+    <iframe id="spotifypromo2" src="https://fearless-spotify.herokuapp.com/"></iframe>
   </div>
   <div id="imac-text" class="col m8 offset-m2">
     <p class="white-text"><%= lorem.sentences(1)%></p>
