--- a/source/partials/_whatwedo.html.erb
+++ b/source/partials/_whatwedo.html.erb
@@ -1,14 +1,14 @@
 <div class="row valign-wrapper">
-  <div class="col m4 valign center-block white-text">
+  <div class="col m4 valign center-block white-text hide-on-small-only">
     <img id="what-logo" class="full-w" src="https://s3.amazonaws.com/tsmdeck/tsmlogoplain.png">
   </div>
-  <div id="what-info-text" class="col m5 valign center-block white-text right-align">
+  <div id="what-info-text" class="col s8 m5 valign center-block white-text right-align">
     <h3>What we do</h3>
     <p><%= lorem.paragraphs(1) %></p>
   </div>
 </div>
 <div class="row">
-  <div class="col m10 offset-m1">
+  <div class="col m10 offset-m1 hide-on-small-only">
     <img id="what-we-do-img" class="full-w" src="https://s3.amazonaws.com/tsmdeck/tsmisometric.png">
   </div>
 </div>
