setup mobile view

--- a/source/partials/_work.html.erb
+++ b/source/partials/_work.html.erb
@@ -3,13 +3,26 @@
     <h2>Our Work In Action</h2>
   </div>
 </div>
-<div class="row valign-wrapper">
+<div class="row hide-on-small-only valign-wrapper">
   <div id="tsm-video" class="col m7 valign">
     <div class="video-container">
       <iframe src="https://player.vimeo.com/video/150444577" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
   </div>
   <div id="project-slider" class="col m5 valign">
+    <div class="slider">
+      <ul class="slides">
+      </ul>
+    </div>
+  </div>
+</div>
+<div class="row hide-on-med-and-up">
+  <div id="tsm-video2" class="col s12">
+    <div class="video-container">
+      <iframe src="https://player.vimeo.com/video/150444577" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    </div>
+  </div>
+  <div id="project-slider2" class="col s12">
     <div class="slider">
       <ul class="slides">
       </ul>
