--- a/source/partials/_technologies.html.erb
+++ b/source/partials/_technologies.html.erb
@@ -4,38 +4,38 @@
   </div>
 </div>
 <div class="row white-text">
-  <div id="sublime" class="col m2 offset-m2 center-align">
-    <img class="full-w long-shadow-teal" src="https://s3.amazonaws.com/tsmdeck/sublime.jpg">
+  <div id="sublime" class="col s12 m2 offset-m2 center-align">
+    <img class="full-w long-shadow-teal hide-on-small-only" src="https://s3.amazonaws.com/tsmdeck/sublime.jpg">
     <p>HTML5, CSS3, JS, jQuery, Bootstrap, MaterializeCSS, + More!</p>
   </div>
-  <div id="terminal" class="col m2 center-align">
-    <img class="full-w long-shadow-teal" src="https://s3.amazonaws.com/tsmdeck/appicns_Terminal.jpg">
+  <div id="terminal" class="col s12 m2 center-align">
+    <img class="full-w long-shadow-teal hide-on-small-only" src="https://s3.amazonaws.com/tsmdeck/appicns_Terminal.jpg">
     <p>Ruby, Rails, NodeJS, MeteorJS, Wordpress, Git, + More!</p>
   </div>
-  <div id="security" class="col m2 center-align">
-    <img class="full-w long-shadow-teal" src="https://s3.amazonaws.com/tsmdeck/tools.jpg">
+  <div id="security" class="col s12 m2 center-align">
+    <img class="full-w long-shadow-teal hide-on-small-only" src="https://s3.amazonaws.com/tsmdeck/tools.jpg">
     <p>SEO, Security, Malware Removal, Migrations, Hosting Solutions, + More!</p>
   </div>
-  <div id="socials" class="col m2 center-align">
-    <img class="full-w long-shadow-teal" src="https://s3.amazonaws.com/tsmdeck/social.jpg">
+  <div id="socials" class="col s12 m2 center-align">
+    <img class="full-w long-shadow-teal hide-on-small-only" src="https://s3.amazonaws.com/tsmdeck/social.jpg">
     <p>Spotify API, Twitter API, Facebook API, Youtube API, Tumblr Design, + More!</p>
   </div>
 </div>
 <div class="row white-text">
-  <div id="mobile" class="col m2 offset-m2 center-align">
-    <img class="full-w long-shadow-teal" src="https://s3.amazonaws.com/tsmdeck/mobile.jpg">
+  <div id="mobile" class="col s12 m2 offset-m2 center-align">
+    <img class="full-w long-shadow-teal hide-on-small-only" src="https://s3.amazonaws.com/tsmdeck/mobile.jpg">
     <p>Responsive Design, iOS Web Apps, Android Web Apps, + More!</p>
   </div>
-  <div id="photoshop" class="col m2 center-align">
-    <img class="full-w long-shadow-teal" src="https://s3.amazonaws.com/tsmdeck/photoshop.jpg">
+  <div id="photoshop" class="col s12 m2 center-align">
+    <img class="full-w long-shadow-teal hide-on-small-only" src="https://s3.amazonaws.com/tsmdeck/photoshop.jpg">
     <p>Photoshop, Illustrator, InDesign, Bridge, + More!</p>
   </div>
-  <div id="design" class="col m2 center-align">
-    <img class="full-w long-shadow-teal" src="https://s3.amazonaws.com/tsmdeck/colors.jpg">
+  <div id="design" class="col s12 m2 center-align">
+    <img class="full-w long-shadow-teal hide-on-small-only" src="https://s3.amazonaws.com/tsmdeck/colors.jpg">
     <p>Print, Digital, Merch Design, Branding, + More!</p>
   </div>
-  <div id="analytics" class="col m2 center-align">
-    <img class="full-w long-shadow-teal" src="https://s3.amazonaws.com/tsmdeck/analytics.jpg">
+  <div id="analytics" class="col s12 m2 center-align">
+    <img class="full-w long-shadow-teal hide-on-small-only" src="https://s3.amazonaws.com/tsmdeck/analytics.jpg">
     <p>Analytics, Ad Design, Ad Budgeting, Ad Campaigns, + More!</p>
   </div>
 </div>
