--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -21,7 +21,8 @@
 
     <!-- Preloader -->
     <%= partial "layouts/partials/preloader"%>
-
+    <!-- Modal -->
+    <%= partial "partials/size-alert"%>
     <%= javascript_include_tag :all %>
   </body>
 </html>
