added meta and favicons

--- a/source/partials/_meta-seo.html.erb
+++ b/source/partials/_meta-seo.html.erb
@@ -1,27 +1,45 @@
+<link rel="apple-touch-icon" sizes="57x57" href="icons/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="icons/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="icons/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="icons/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="icons/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="icons/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="icons/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="icons/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="icons/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="icons/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="icons/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+<link rel="manifest" href="icons/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="icons/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
+
 <!-- Update your html tag to include the itemscope and itemtype attributes. -->
 <html itemscope itemtype="http://schema.org/Type">
 
 <!-- Place this data between the <head> tags of your website -->
-<title><%= current_page.data.title || "The Middleman" %></title>
-<meta name="description" content="The description" />
+<title><%= current_page.data.title || "Trendsetter Marketing" %></title>
+<meta name="description" content="Trendsetter Media and Marketing is a full service music video promotion and production with offices in both New Jersey and Los Angeles" />
 
 <!-- Schema.org markup for Google+ -->
-<meta itemprop="name" content="The title">
-<meta itemprop="description" content="The description">
-<meta itemprop="image" content="<%= lorem.image('600x400') %>">
+<meta itemprop="name" content="Trendsetter Marketing">
+<meta itemprop="description" content="Trendsetter Media and Marketing is a full service music video promotion and production with offices in both New Jersey and Los Angeles.">
+<meta itemprop="image" content="https://s3.amazonaws.com/tsmdeck/tsmshareimage.png">
 
 <!-- Twitter Card data -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:site" content="@twitterhandle">
-<meta name="twitter:title" content="The title">
-<meta name="twitter:description" content="The description">
-<meta name="twitter:creator" content="@twitterhandle">
-<meta name="twitter:image" content="<%= lorem.image('600x400') %>">
+<meta name="twitter:site" content="@trendsettermm">
+<meta name="twitter:title" content="Trendsetter Marketing">
+<meta name="twitter:description" content="Trendsetter Media and Marketing is a full service music video promotion and production with offices in both New Jersey and Los Angeles.">
+<meta name="twitter:creator" content="@trendsettermm">
+<meta name="twitter:image" content="https://s3.amazonaws.com/tsmdeck/tsmshareimage.png">
 
 <!-- Open Graph data -->
-<meta property="og:title" content="The title" />
+<meta property="og:title" content="Trendsetter Marketing" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="http://www.example.com" />
-<meta property="og:image" content="<%= lorem.image('600x400') %>" />
-<meta property="og:description" content="The description" />
-<meta property="og:site_name" content="Site name" />
+<meta property="og:image" content="https://s3.amazonaws.com/tsmdeck/tsmshareimage.png" />
+<meta property="og:description" content="Trendsetter Media and Marketing is a full service music video promotion and production with offices in both New Jersey and Los Angeles." />
+<meta property="og:site_name" content="Trendsetter Marketing" />
