added allies copy

--- a/source/partials/_games.html.erb
+++ b/source/partials/_games.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col m9 offset-m1 white-text">
     <h3 id="game-headline">Custom Games and Web Apps</h3>
-    <p id="game-text"><%= lorem.sentences(2) %></p>
+    <p id="game-text">While we have created some amazing contesting tools, there is so much more out there and we want to create it! No idea is too big or too small for our team, and we can turn your dreams into reality!</p>
   </div>
 </div>
 <div class="row valign-wrapper">
