--- a/source/partials/_instagram.html.erb
+++ b/source/partials/_instagram.html.erb
@@ -5,13 +5,13 @@
   </div>
   <div id="insta-text" class="col m5 center-block valign white-text right-align">
     <h3>Instagram Hashtag Contests</h3>
-    <p><%= lorem.paragraphs(1) %></p>
+    <p>Utilized as a photo or shortform video uploader for users, fans feed content into the page, with a designated hashtag, which interactively displays images or videos they choose to post.</p>
   </div>
 </div>
 <div class="row hide-on-med-and-up">
   <div id="insta-text2" class="col s12 center-block white-text right-align">
     <h3>Instagram Hashtag Contests</h3>
-    <p><%= lorem.paragraphs(1) %></p>
+    <p>Utilized as a photo or shortform video uploader for users, fans feed content into the page, with a designated hashtag, which interactively displays images or videos they choose to post.</p>
   </div>
   <div id="hashtags2" class="col s12 center-block white-text">
     <script src="https://snapwidget.com/js/snapwidget.js"></script>
