--- a/source/partials/_sharecontest.html.erb
+++ b/source/partials/_sharecontest.html.erb
@@ -2,7 +2,7 @@
   <div id="share-contest" class="col s12 m6 valign center-block">
     <div class="right-align white-text hide-on-med-and-up">
       <h3>Share Contest</h3>
-      <p><%= lorem.sentences(1) %></p>
+      <p>Increase your chances to win by doing what you do best on social media - sharing exciting news with friends.</p>
     </div>
     <!-- CONTEST -->
     <%= partial 'partials/contest' %>
@@ -10,7 +10,7 @@
   <div id="share-ipad" class="col m4 hide-on-small-only valign center-block">
     <div class="right-align white-text">
       <h3>Share Contest</h3>
-      <p><%= lorem.sentences(1) %></p>
+      <p>Increase your chances to win by doing what you do best on social media - sharing exciting news with friends.</p>
     </div>
     <img class="full-w" src="https://s3.amazonaws.com/tsmdeck/sharecontestimage.png">
   </div>
