--- a/source/partials/_spotify.html.erb
+++ b/source/partials/_spotify.html.erb
@@ -32,6 +32,6 @@
     <iframe id="spotifypromo2" src="https://fearless-spotify.herokuapp.com/"></iframe>
   </div>
   <div id="imac-text" class="col m8 offset-m2">
-    <p class="white-text"><%= lorem.sentences(1)%></p>
+    <p class="white-text">Create a playlist and win big prizes - it's that easy!</p>
   </div>
 </div>
