--- a/source/partials/_whatwedo.html.erb
+++ b/source/partials/_whatwedo.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div id="what-info-text" class="col s8 m5 valign center-block white-text right-align">
     <h3>What we do</h3>
-    <p><%= lorem.paragraphs(1) %></p>
+    <p>While Trendsetter has spent years perfecting our video marketing, we felt that there was so much more we could bring to the table outside of the video space. We assembled a team of brilliant designs & programmers here to build out an elite page building application that can be utilized across all social networks.</p>
   </div>
 
 </div>
