fixed tsm contact link

--- a/source/partials/_contact.html.erb
+++ b/source/partials/_contact.html.erb
@@ -3,7 +3,7 @@
     <h2>Thank You!</h2>
   </div>
   <div id="contact-btn" class="col s12 center-align">
-    <a href="https://www.trendsettermarketing.net/#contact" target="_blank">
+    <a href="http://www.trendsettermarketing.net/#contact" target="_blank">
       <div class="btn btn-large hoverable purple darken-3">
         Contact Us
       </div>
